# fastforward

./: .devcontainer.json  .dockerignore  .gitignore  .gitlab-ci.yml  404.html  AGENTS.md  GUIDELINES.md  LICENSE  Makefile  NOTICE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  free_form.yml
.github/workflows/: ci.yml  cleanup.yml  mirror.yml  pages.yml  pr_check.yml  pr_lint.yml
docker/: Dockerfile  Dockerfile.ci
docs/: gen_reference.py  no_sitemap_plugin.py  ruff.toml
docs/examples/: .gitignore  autoquant.md  autoquant_llama.nb.py  export_llama.nb.py  export_pipeline.nb.py  gptq_orchestration.nb.py  implement_custom_quantizer.nb.py  index.md  local_error_methods.py  mpath.nb.py  orchestrator.nb.py  quantizing_networks.nb.py  quick_start_quantize_llms.nb.py  save_load_quantization_state.nb.py
docs/examples/doc_helpers/: llama_graph_module.py  quick_start_utils.py
docs/examples/quick_start/: quick_start_quantize_llms.nb.py  quick_start_utils.py
docs/release_notes/: index.md  v0_1.md  v0_2.md  v0_3.md  v0_3_1.md  v0_3_2.md
docs/stylesheets/: extra.css
examples/: index.html
examples/implement_custom_quantizer.nb/: index.html
examples/mpath.nb/: index.html
examples/orchestrator.nb/: index.html  orchestrator.nb.py
examples/quantizing_networks.nb/: index.html  quantizing_networks.nb.py
examples/quick_start/: quick_start_utils.py
examples/quick_start/quick_start_quantize_llms.nb/: index.html  quick_start_quantize_llms.nb.py
funcgen/: gen_operators.py  generate.py
main/: 404.html  index.html  objects.inv  ruff.toml
main/examples/: index.html
main/examples/autoquant/: index.html
main/examples/autoquant_llama.nb/: index.html
main/examples/doc_helpers/: data_utils.py  utils.py
main/examples/export_llama.nb/: export_llama.nb.py  index.html
main/examples/export_pipeline.nb/: export_pipeline.nb.py  index.html
main/examples/mpath.nb/: index.html  mpath.nb.py
main/examples/orchestrator.nb/: index.html  orchestrator.nb.py
main/examples/quantizing_networks.nb/: index.html  quantizing_networks.nb.py
main/examples/quick_start_quantize_llms.nb/: index.html  quick_start_quantize_llms.nb.py
main/examples/save_load_quantization_state.nb/: index.html  save_load_quantization_state.nb.py
main/reference/fastforward/: index.html
main/reference/summary/: index.html
main/search/: search_index.json
reference/fastforward/: index.html
reference/fastforward/common/: index.html
reference/fastforward/dispatcher/: index.html
reference/fastforward/exceptions/: index.html
reference/fastforward/flags/: index.html
reference/fastforward/forward_override/: index.html
reference/fastforward/mpath/: index.html
reference/fastforward/nn/: index.html
reference/fastforward/overrides/: index.html
reference/fastforward/quantization/: index.html
reference/fastforward/quantized_tensor/: index.html
reference/fastforward/range_setting/: index.html
reference/fastforward/type_common/: index.html
reference/summary/: index.html
scripts/: ci_write_matrix_json.py  clone-user  copyright.py  docker_cleanup.py  generate-code  generate_mypy_traverser.py  pr_content_lint.py  rebuild  verify  versions.py
search/: search_index.json
src/fastforward/: __init__.py  _import.py  _version.py  autoquant.py  cache.py  common.py  dataclasses.py  dispatcher.py  exceptions.py  flags.py  forward_override.py  logging.py  orchestration.py  overrides.py  quantized_tensor.py  serialization.py  type_common.py
src/fastforward/_autoquant/: autoquant.py  bypass.py  convert.py  function_context.py  pass_manager.py
src/fastforward/_gen/: fallback.py  operators.py
src/fastforward/_orchestration/: concurrent_execution.py  graph_module.py  instruction_engine.py  registry.py  trace.py
src/fastforward/_quantops/: __init__.py  _parser.py  generate.py  operator.py  optable.py  quantized_operators.yaml  spec_parser.py  symtypes.py
src/fastforward/_utils/: __init__.py  classproperty.py
src/fastforward/autoquant/: __init__.py  autoquant.py  (+1 more)
tests/: AGENTS.md  _core_package_version_utils.py  conftest.py  ruff.toml  test_cache.py  test_dispatcher.py  test_environment.py  test_flags.py  test_forward_override.py  test_gen_fallback.py  test_import.py  test_logging.py  test_metrics.py  test_overrides.py  test_quantized_tensor.py  test_range_setting.py  test_serialization.py  test_type_common.py
tests/_orchestration/: _models.py  conftest.py  test_concurrent_execution.py  test_gptq_end2end.py  test_graph_module.py  test_instruction_engine.py  test_orchestration.py  test_registry.py  test_trace.py
tests/_quantops/: test_generate.py  test_operator.py  test_optable.py  test_spec_parser.py  test_symtypes.py
tests/autoquant/: conftest.py  test_annotator.py  test_autoquant.py  test_autoquant_functions.py  test_autoquant_inplace_operations.py  test_autoquant_model.py  test_autoquant_operation_order.py  test_end2end.py  test_function_context.py  test_pass_manager.py  test_pybuilder.py  test_quantizer_collection.py  test_scalar_type_propagation.py  test_unimplemented.py
tests/export/: conftest.py  export_utils.py  test_export.py  test_export_mode.py  test_export_schemas.py  test_graph_operations.py  test_lpbq_encodings.py  test_module_export.py  test_onnx_helpers.py
tests/mpath/: test_parser.py  test_search.py  test_selector.py
tests/nn/: test_activations.py  test_conv.py  test_dynamic_linear_quantizer.py  test_fallback.py  test_linear_quantized_ops.py  test_linear_quantizer.py  test_quantized_module.py  test_quantized_module_quantization_state.py  test_quantizer.py
tests/quantization/: test_dynamic.py  test_freeze.py  test_function.py  test_gptq.py  test_granularity.py  test_output_mse.py  test_quant_init.py  test_quantizer_annotations.py  test_ste.py  test_strict_quantization.py  test_tiled_affine.py  test_tiled_tensor.py
tests/range_setting/: test_minerror.py  test_minmax.py
tests/testing/: test_package_mock.py
tests/utils/: __init__.py  string.py
(+335 files in other folders)
